<resources>
    <string name="app_name">Bootcamp 01</string>
    <string name="amitabh_bachchan">Amitabh Bachchan</string>
    <string name="enter_number">Enter Number</string>
    <string name="msg_default">Click `Calculate` to start computation</string>
    <string name="calculate">Calculate</string>
    <string name="current_time">Current Time</string>
    <string name="msg_current_time">Click current time to know current time</string>
</resources>
